@@ -17,96 +17,100 @@ all_pod_files_spelling_ok();
 
 __DATA__
 ACKNOWLEDGEMENTS
-API
-APIs
 Akira
+API
+apihost
+apirealm
+APIs
+apiurl
 AutoCursor
 BasicUser
+blogging
+clientname
+clienturl
+clientver
+contributees
 CPAN
 DateTime
 DirectMessage
 EOT
 Etcheverry
 ExtendedUser
-GPS
-Grennan
-IM
-IP
-IRC
-Identi
-InflateObjects
-JSON
-KATOU
-Laconica
-Marc
-Mims
-Miyagawa
-OAuth
-OMG
-Prather
-RateLimit
-RateLimitStatus
-RetryOnError
-Retweets
-SMS
-SSL
-SavedSearch
-Str
-Tatsuhiko
-Twitter
-TwitterVision
-Un
-Unsubscribes
-WOEID
-WiFi
-WrapError
-apihost
-apirealm
-apiurl
-blogging
-clientname
-clienturl
-clientver
 favorited
 friended
 geo
 geocode
+GPS
 granularities
+Grennan
+Identi
 identi
 identica
+IM
+InflateObjects
 inline
+IP
+ip
+IRC
+JSON
+KATOU
+Laconica
 lang
+Marc
+Mims
+Miyagawa
 multipart
 netrc
+OAuth
 oauth
 ok
+OMG
 online
 parameterized
 params
-perigrin
 Pecorella
+perigrin
+Prather
+RateLimit
+RateLimitStatus
 refactored
 requester's
+RetryOnError
 return's
 retweet
 retweeted
 retweeting
+Retweets
 retweets
 rpp
+SavedSearch
+SMS
 spammer
+SSL
 ssl
+Str
 stringifies
+Tatsuhiko
 timeline
 tvhost
 tvrealm
 tvurl
+Twitter
+Twitter's
 twitterpm
+TwitterVision
 twittervision
 ua
+Un
 un
 unfollow
+Unsubscribes
 url
 useragent
 username
+usernames
+WiFi
+WOEID
 woeid
+WrapError
 xAuth
